# email_gym

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  __init__.py  app.py  client.py  create_model_repo.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
message_routing_gym/: __init__.py  constants.py  graders.py  models.py  rewards.py  tasks.py
server/: app.py  gradio_builder.py  message_routing_environment.py
tests/: test_env.py
